LUIS model url added

--- a/Node/blog-LUISActionBinding/samples/.env
+++ b/Node/blog-LUISActionBinding/samples/.env
@@ -3,7 +3,7 @@ MICROSOFT_APP_ID=
 MICROSOFT_APP_PASSWORD=
 
 # This Url can be obtained by uploading or creating your model from the LUIS portal: https://www.luis.ai/
-LUIS_MODEL_URL=
+LUIS_MODEL_URL=https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/7696b02c-78e5-49ff-9535-5d725b8e6b39?subscription-key=fae30948acc04afd9132d45a055881ba&verbose=true&timezoneOffset=0&q=
 
 # https://www.apixu.com/
 APIXU_API_KEY=fcfe74816dd241fca46160635171002
