--- a/Node/blog-LUISActionBinding/samples/web/package.json
+++ b/Node/blog-LUISActionBinding/samples/web/package.json
@@ -12,6 +12,7 @@
     "express": "~4.14.1",
     "lodash": "^4.17.4",
     "morgan": "~1.7.0",
+    "path": "^0.12.7",
     "pug": "~2.0.0-beta10",
     "serve-favicon": "~2.3.2"
   }
